# spaya-api-v2-client

./: .gitignore  LICENSE  README.md  demo_client.ipynb  main.py  pyproject.toml
data/: sample_fragment_growing_data.csv
samples/: 10-molecules.txt
src/helpers/: check_batch_status.py  spaya_api_client.py  submit_batch_from_file.py  utils.py
